--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "matkaklubi",
+  "version": "1.0.0",
+  "description": "Matkaklubi rakendus",
   "engines": {
     "node": "16.x"
   },
